objects/USL_Queues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>QueueId10__c</fullName>
        <label>CS Consultant Support GOP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueId11__c</fullName>
        <label>CS Contultant Purchase Orders</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueId12__c</fullName>
        <label>CS Contultant SO Future Lapse</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>USL Queues</label>
</CustomObject>